--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 html {
   background-color: pink;
   width: 50%;
-  margin: auto;
-  border: 3px solid black
-  padding: 10px
+  margin-top: 100px;
+  margin-left: 500px;
+  border: 3px solid black;
+  padding: 10px;
+  font-size: 20px;
+
 }
 .header {
   text-align: center;
@@ -18,10 +21,6 @@ img {
 .content {
   text-align: right;
   text-decoration-color: green
-
-}
-h2{
-  text-decoration: underline strong;
 }
 h1{
   text-align: center;
@@ -35,4 +34,8 @@ h3{
   border: 10px solid red;
   padding: 20px;
 
+}
+span{
+  font-weight: bold;
+  font-family: fantasy;
 }
